# df-app-calendar

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.py
app_calendar/: eff_date.py
app_calendar/cfg/: config_dev.yaml
data/: cycle_date.csv
scripts/: app_calendar
src/app_calendar/: eff_date.py
tests/: test_eff_date.py
