[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "app_calendar"
version = "0.0.1"
authors = [
  { name="Rajakumaran Arivumani", email="author@example.com" },
]
description = "Application calendar app package"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
#license = "MIT"
#license-files = ["LICEN[CS]E*"]
dependencies = [
  # app specific 
  "pandas == 2.1.4",
  "python-dateutil", 
  # my packages
  "utils", 
  "metadata", 
  # my packages
  #"utils @ git+https://github.com/dexplorer/utils",
  #"metadata @ git+https://github.com/dexplorer/df-metadata",
]
keywords = ["data", "profile", "etl", "elt", "framework", "governance"]

[project.optional-dependencies]
test = [
  # standard dev tools
  "pytest",
  "pytest-cov",
  "pylint",
  "black",
  "ipython",
]

[project.scripts]

[project.urls]
Homepage = "https://profile.rajakumaran.in"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/dexplorer/df-app-calendar.git"
Issues = "https://github.com/dexplorer/df-app-calendar/issues"
Changelog = "https://github.com/dexplorer/df-app-calendar/blob/master/CHANGELOG.md"
